--- a/styles/invoice.scss
+++ b/styles/invoice.scss
@@ -10,6 +10,7 @@
   background-repeat: no-repeat;
   background-attachment: fixed;
   padding: 40px 5px;
+  color: #222;
   button {
     border: none;
     outline: none;
@@ -153,8 +154,8 @@
 .order-confirm {
   width: 100%;
   height: 100vh;
-  background-image: url("/1.jpg");
-  background-position: top;
+  background-image: url("/thank.jpeg");
+  background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -179,7 +180,7 @@
     }
   }
   .order-container {
-    background-color: rgba(34, 34, 34, 0.305);
+    background-color: rgba(0, 0, 0, 0);
     backdrop-filter: blur(5px);
     padding: 40px;
     border-radius: 5px;
@@ -191,22 +192,25 @@
     h1 {
       text-transform: uppercase;
       text-align: center;
-      color: #fff;
+      color: rgb(0, 0, 0);
       font-weight: 900;
+      margin: 0;
     }
     h3 {
+      margin: 0;
       text-align: center;
-      color: #fff;
+      color: rgb(0, 0, 0);
       font-weight: 600;
-      font-size: 17px;
+      font-size: 15px;
     }
     img {
       width: 100px;
     }
     p {
-      color: white;
+      margin-top: 5px;
+      color: rgb(2, 2, 2);
       font-size: 17px;
-      text-align: justify;
+      text-align: center;
     }
   }
 }
