--- a/styles/package.scss
+++ b/styles/package.scss
@@ -10,7 +10,7 @@
     cursor: pointer;
     font-weight: 700;
     &:hover {
-        background: linear-gradient(-45deg, #fe0847, #feae3f);
+      background: linear-gradient(-45deg, #fe0847, #feae3f);
       color: #fff;
     }
   }
@@ -277,6 +277,10 @@
           width: 300px;
           background-color: white;
         }
+        input[type="date"] {
+          width: 250px;
+          color: rgb(0, 0, 0);
+        }
       }
     }
     input,
@@ -287,9 +291,6 @@
       padding: 5px;
       margin: 10px;
       background-color: transparent;
-    }
-    input[type="date"] {
-      width: 250px;
     }
     input[type="button"] {
       cursor: pointer;
