--- a/styles/package.scss
+++ b/styles/package.scss
@@ -9,11 +9,13 @@
     border-radius: 5px;
     cursor: pointer;
     font-weight: 700;
+
     &:hover {
       background: linear-gradient(-45deg, #fe0847, #feae3f);
       color: #fff;
     }
   }
+
   section {
     width: 100%;
     height: 100vh;
@@ -23,6 +25,7 @@
     background-image: url("/package.jpeg");
     background-attachment: fixed;
     padding-bottom: 20px;
+
     // &:after {
     //   content: "";
     //   width: 98.8%;
@@ -42,15 +45,18 @@
       font-size: 60px;
       font-weight: 700;
     }
+
     .row {
       justify-content: center;
       align-items: center;
       padding-top: 20px;
     }
+
     .col-sm-4 {
       margin: 20px;
       z-index: 2;
     }
+
     .card {
       position: relative;
       height: auto;
@@ -61,11 +67,13 @@
       transition: 0.3s;
       overflow: hidden;
       cursor: default;
+
       &:hover {
         -webkit-transform: scale(1.04);
         transform: scale(1.04);
         box-shadow: 0 0 100px rgba(0, 0, 0, 0.168);
       }
+
       &::before {
         content: "";
         position: absolute;
@@ -78,6 +86,7 @@
         -webkit-transform: skewY(-5deg) scale(1.5);
         transform: skewY(-5deg) scale(1.5);
       }
+
       .title {
         .fa {
           color: #fff;
@@ -90,6 +99,7 @@
           -webkit-box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
           box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
         }
+
         h2 {
           position: relative;
           padding: 0;
@@ -98,22 +108,31 @@
           z-index: 2;
         }
       }
+
       .price,
       .option {
         position: relative;
         z-index: 2;
       }
+
       .price h4 {
         margin: 0;
         padding: 10px 0;
         color: #fff;
         font-size: 60px;
+
+        sup {
+          font-weight: 700;
+          font-family: "Courier New", Courier, monospace;
+        }
       }
+
       .option ul {
         margin: 0;
         padding: 0;
         text-align: center;
       }
+
       .option ul li {
         margin: 0 0 5px;
         padding: 0;
@@ -121,6 +140,7 @@
         color: #fff;
         font-size: 16px;
       }
+
       a {
         position: relative;
         z-index: 2;
@@ -137,11 +157,13 @@
         cursor: pointer;
         -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
         box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+
         &:hover {
           text-decoration: none;
         }
       }
     }
+
     button {
       border: none;
       outline: none;
@@ -156,6 +178,7 @@
       transition: 0.3s;
       background: linear-gradient(-45deg, #fe0847, #feae3f);
       color: #fff;
+
       &:hover {
         background: linear-gradient(45deg, #fe0847, #feae3f);
         color: #fff;
@@ -167,18 +190,22 @@
   .col-sm-4:nth-child(1) .card .title .fa {
     background: linear-gradient(-45deg, #f403d1, #64b5f6);
   }
+
   .col-sm-4:nth-child(2) .card,
   .col-sm-4:nth-child(2) .card .title .fa {
     background: linear-gradient(-45deg, #ffec61, #f321d7);
   }
+
   .col-sm-4:nth-child(3) .card,
   .col-sm-4:nth-child(3) .card .title .fa {
     background: linear-gradient(-45deg, #24ff72, #9a4eff);
   }
+
   .col-sm-4:nth-child(5) .card,
   .col-sm-4:nth-child(5) .card .title .fa {
     background: linear-gradient(-45deg, #f403d1, #64b5f6);
   }
+
   .col-sm-4:nth-child(6) .card,
   .col-sm-4:nth-child(6) .card .title .fa {
     background: linear-gradient(-45deg, #24ff72, #9a4eff);
@@ -197,6 +224,21 @@
   justify-content: center;
   align-items: center;
   background-attachment: fixed;
+  flex-direction: column;
+
+  .termandcondition {
+    font-size: 14px;
+    color: white;
+    background-color: #032622;
+    margin: 20px 50px;
+    padding: 20px;
+    border-radius: 5px;
+
+    h3 {
+      text-align: center;
+    }
+  }
+
   .booking-back {
     position: absolute;
     top: 20px;
@@ -207,13 +249,22 @@
     font-weight: 700;
     transition: 0.5s;
     cursor: pointer;
+
     &:hover {
       background-color: #24ff72;
       font-weight: 900;
       letter-spacing: 2px;
     }
   }
+
   .store-details {
+    .checkbox-terms {
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
     button {
       border: none;
       outline: none;
@@ -229,6 +280,7 @@
       color: #032622;
       font-weight: 700;
     }
+
     background: linear-gradient(-45deg, #046d614d, #032622, #032622);
     box-shadow: 0 0 100px rgba(0, 0, 0, 0.252);
     width: fit-content;
@@ -238,26 +290,32 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+
     .store-title {
       color: rgb(255, 230, 243);
+
       h1 {
         font-weight: 900;
         color: #daa639;
         font-size: 40px;
       }
+
       text-transform: capitalize;
       text-align: center;
       font-size: 20px;
     }
+
     .store-st {
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
       padding: 20px 0 10px 0;
+
       div {
         display: flex;
         flex-direction: column;
         justify-items: center;
+
         label {
           text-transform: capitalize;
           margin-left: 10px;
@@ -266,6 +324,7 @@
           font-weight: 900;
           color: rgb(255, 244, 250);
         }
+
         input,
         select {
           margin-top: 5px;
@@ -277,12 +336,14 @@
           width: 300px;
           background-color: white;
         }
+
         input[type="date"] {
           width: 250px;
           color: rgb(0, 0, 0);
         }
       }
     }
+
     input,
     select {
       border: none;
@@ -292,6 +353,7 @@
       margin: 10px;
       background-color: transparent;
     }
+
     input[type="button"] {
       cursor: pointer;
       width: fit-content;
@@ -306,6 +368,7 @@
       cursor: pointer;
       background-color: rgba(240, 248, 255, 0.292);
       transition: 0.3s;
+
       &:hover {
         background-color: rgb(36, 2, 23);
         color: #ddd;
@@ -313,6 +376,7 @@
     }
   }
 }
+
 //page 3 design (GIFT)
 .booking-gift {
   background-image: url("/gift.jpeg");
@@ -326,6 +390,32 @@
   flex-direction: column;
   overflow: auto;
   padding: 50px 0;
+
+  .selectalbam {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 30px;
+    #carouselExampleIndicators {
+      width: 90%;
+      margin: auto;
+      width: 50%;
+    }
+    .store-st{
+      color: white;
+      margin-top: 20px;
+      font-size: 20px;
+      input{
+        color: #032622;
+        border: none;
+        outline: none;
+        border-radius: 5px;
+        margin-left: 10px;
+      }
+    }
+  }
+
   header {
     text-align: center;
     font-size: 60px;
@@ -333,6 +423,7 @@
     color: white;
     margin-bottom: 20px;
   }
+
   .booking-back {
     position: absolute;
     top: 20px;
@@ -343,27 +434,32 @@
     font-weight: 700;
     transition: 0.5s;
     cursor: pointer;
+
     &:hover {
       background-color: #24ff72;
       font-weight: 900;
       letter-spacing: 2px;
     }
   }
+
   .gift-card-container {
     display: flex;
     flex-wrap: wrap;
     gap: 50px;
     justify-content: center;
     align-items: center;
+
     .gift-card {
       width: 300px;
       background: #fff;
       display: flex;
       flex-direction: column;
+
       img {
         width: 100%;
         height: 210px;
       }
+
       h1 {
         margin: 0;
         border-bottom: 2px solid gray;
@@ -371,11 +467,13 @@
         background-color: #121515;
         color: #fff;
       }
+
       h1,
       h2 {
         text-align: center;
         font-weight: 700;
       }
+
       a {
         display: block;
         margin: auto;
@@ -386,9 +484,11 @@
         border-radius: 50px;
         text-decoration: none;
       }
+
       padding-bottom: 10px;
     }
   }
+
   button {
     border: none;
     outline: none;
@@ -399,6 +499,7 @@
     padding: 5px 20px;
     border-radius: 5px;
     cursor: pointer;
+
     &:hover {
       background-color: #d58445;
       color: white;
